--- a/docs/faststore/components/atoms/icon.mdx
+++ b/docs/faststore/components/atoms/icon.mdx
@@ -16,7 +16,7 @@ Typical use cases include:
 - [TODO: Add status/feedback usages that are actually supported]
 - [TODO: Add product or action-level uses grounded in your UI]
 
-For the full catalog, see the [list of available icons](https://developers.vtex.com/docs/guides/faststore/reference-icons).
+>ℹ️ See more avalilable icons in the the [Iconograpgy guide](https://developers.vtex.com/docs/guides/faststore/reference-icons).
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
