--- a/docs/faststore/components/atoms/icon.mdx
+++ b/docs/faststore/components/atoms/icon.mdx
@@ -9,7 +9,7 @@ components:
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Icon)
 
-Icons are simplified graphics used to represent concepts and help users navigate the UI. This project has a [set of icons](https://developers.vtex.com/docs/guides/faststore/reference-icons) that uses SVGs from [Phosphor icons](https://phosphoricons.com).
+Icons are simplified graphics used to represent concepts and help users navigate the UI. This project has a [set of icons](https://developers.vtex.com/docs/guides/faststore/reference-icons) that uses SVGs from [Phosphor Icons](https://phosphoricons.com).
 
 Typical use cases include:
 - [TODO: Add key navigation/affordance examples relevant to your app]
