--- a/docs/faststore/components/atoms/icon.mdx
+++ b/docs/faststore/components/atoms/icon.mdx
@@ -233,7 +233,7 @@ Control icon size with the `width` and `height` props. If omitted, both default 
 
 The `Icon` component does not expose dedicated design tokens. Customize its appearance using:
 
-- SVG props: `stroke`, `fill`, `width`, `height`. The visible stroke width is derived from the `weight` prop (`thin`, `light`, `regular`, `bold`).
+- SVG props: `stroke`, `fill`, `width`, `height`. The visible stroke width is derived from the [`weight`](#weight) prop (`thin`, `light`, `regular`, `bold`).
 - CSS targeting the data attribute `[data-fs-icon]` for layout adjustments. The default theme applies only structural styles to this selector.
 
 ---
@@ -262,4 +262,3 @@ You can target and override `Icon` styles using the following data attributes:
 ### ❌ Don'ts
 - Don't rely solely on color or the icon graphic to convey critical meaning.
 - Don't mix multiple icon weights within the same control or pattern.
-- [TODO: Add product-specific pitfalls to avoid, if any.]
