--- a/docs/faststore/components/atoms/icon.mdx
+++ b/docs/faststore/components/atoms/icon.mdx
@@ -233,7 +233,7 @@ Control icon size with the `width` and `height` props. If omitted, both default 
 
 The `Icon` component does not expose dedicated design tokens. Customize its appearance using:
 
-- SVG props (e.g., `stroke`, `fill`, `width`, `height`). The visible stroke width is derived from the [`weight`](#weight) prop (`thin`, `light`, `regular`, `bold`).
+- SVG props (such as `stroke`, `fill`, `width`, `height`). The visible stroke width is derived from the [`weight`](#weight) prop (`thin`, `light`, `regular`, `bold`).
 - CSS targeting the `[data-fs-icon]` data attribute for layout adjustments. The default theme applies only structural styles to this selector.
 
 ---
