--- a/docs/faststore/components/atoms/icon.mdx
+++ b/docs/faststore/components/atoms/icon.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Icon"
-excerpt: Icons are simplified graphics used to represent concepts and help users navigate the UI.
+excerpt: Icons are simplified graphics that represent actions, status, navigation and help users navigate the UI.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Icon___9437da8db13517090534a38f4870d702.png
 components:
@@ -9,12 +9,17 @@ components:
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Icon)
 
-Icons are simplified graphics used to represent concepts and help users navigate the UI. This project has a [set of icons](https://developers.vtex.com/docs/guides/faststore/reference-icons) that uses SVGs from [Phosphor Icons](https://phosphoricons.com).
+The `Icon` component is a simplified graphic used to represent concepts and help users navigate the UI. This component renders SVGs from a [set of icons](https://developers.vtex.com/docs/guides/faststore/reference-icons) based on [Phosphor Icons](https://phosphoricons.com).
 
 Typical use cases include:
-- [TODO: Add key navigation/affordance examples relevant to your app]
-- [TODO: Add status/feedback usages that are actually supported]
-- [TODO: Add product or action-level uses grounded in your UI]
+- Navigating app sections (open/close menus, back/forward, home).
+- Triggering actions (add to cart, share, favorite).
+- Indicating status and feedback (info, success, warning, error).
+- Supporting commerce flows (cart, account, checkout steps)
+- Assisting input interactions (search, clear, show/hide password, copy)
+- Guiding list and menu navigation (dropdown indicators, breadcrumbs, pagination)
+- Illustrating empty states and onboarding messages
+- Enhancing icon-only controls with accessible labels
 
 >ℹ️ See more available icons in the [Iconography guide](https://developers.vtex.com/docs/guides/faststore/reference-icons).
 
