Add typical use cases

--- a/docs/faststore/components/atoms/icon.mdx
+++ b/docs/faststore/components/atoms/icon.mdx
@@ -9,17 +9,15 @@ components:
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Icon)
 
-The `Icon` component is a simplified graphic used to represent concepts and help users navigate the UI. This component renders SVGs from a [set of icons](https://developers.vtex.com/docs/guides/faststore/reference-icons) based on [Phosphor Icons](https://phosphoricons.com).
+The `Icon` component is a simplified graphic used to represent concepts and help users navigate the UI. This component renders SVGs from a [set of icons](https://developers.vtex.com/docs/guides/faststore/reference-icons) based on [Phosphor Icons](https://phosphoricons.com). Typical use cases include:
 
-Typical use cases include:
-- Navigating app sections (open/close menus, back/forward, home).
-- Triggering actions (add to cart, share, favorite).
-- Indicating status and feedback (info, success, warning, error).
-- Supporting commerce flows (cart, account, checkout steps)
-- Assisting input interactions (search, clear, show/hide password, copy)
-- Guiding list and menu navigation (dropdown indicators, breadcrumbs, pagination)
-- Illustrating empty states and onboarding messages
-- Enhancing icon-only controls with accessible labels
+- Navigate the interface: open and close menus, back and forward, home.
+- Trigger actions: add to cart, share, favorite.
+- Indicate status and feedback: info, success, warning, error.
+- Support commerce flows: cart, account, checkout steps.
+- Assist inputs: search, clear, show or hide password, copy.
+- Guide lists and menus: dropdown indicators, breadcrumbs, pagination.
+- Illustrate empty states and onboarding messages.
 
 >ℹ️ See more available icons in the [Iconography guide](https://developers.vtex.com/docs/guides/faststore/reference-icons).
 
