--- a/docs/faststore/components/atoms/icon.mdx
+++ b/docs/faststore/components/atoms/icon.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Icon"
-excerpt: Icons are simplified graphics that represent actions, status, navigation and help users navigate the UI.
+excerpt: Icons are simplified graphics that represent actions, status, and navigation, and help users navigate the UI.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Icon___9437da8db13517090534a38f4870d702.png
 components:
