--- a/docs/faststore/components/atoms/icon.mdx
+++ b/docs/faststore/components/atoms/icon.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Icon"
-excerpt: Icons are simplified graphics that represent actions, status, and navigation, and help users navigate the UI.
+excerpt: Icons are simplified graphics that represent actions, statuses, and navigation, and help users navigate the UI.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Icon___9437da8db13517090534a38f4870d702.png
 components:
@@ -9,7 +9,7 @@ components:
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Icon)
 
-The `Icon` component represent a set of icons that are simplified graphics used to represent concepts and help users navigate the UI. These icons renders SVGs from a [set of icons](https://developers.vtex.com/docs/guides/faststore/reference-icons) based on [Phosphor Icons](https://phosphoricons.com). Typical use cases include:
+The `Icon` component represents a set of icons that are simplified graphics used to represent concepts and help users navigate the UI. These icons render SVGs from a [set of icons](https://developers.vtex.com/docs/guides/faststore/reference-icons) based on [Phosphor Icons](https://phosphoricons.com). Typical use cases include:
 
 - Navigate the interface: open and close menus, back and forward, home.
 - Trigger actions: add to cart, share, favorite.
