Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/atoms/icon.mdx
+++ b/docs/faststore/components/atoms/icon.mdx
@@ -9,7 +9,7 @@ components:
 
 [<i class="fa-brands fa-github"></i> Source code](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Icon)
 
-The `Icon` component is a set of icons that represent concepts and help users navigate the UI. These icons render SVGs from the FastStore [Iconagraphy library](https://developers.vtex.com/docs/guides/faststore/reference-icons) based on [Phosphor Icons](https://phosphoricons.com). Typical use cases include:
+The `Icon` component is a set of icons that represent concepts and help users navigate the UI. These icons render SVGs from the FastStore [Iconography library](https://developers.vtex.com/docs/guides/faststore/reference-icons) based on [Phosphor Icons](https://phosphoricons.com). Typical use cases include:
 
 - Navigate the interface: open and close menus, back and forward, home.
 - Trigger actions: add to cart, share, favorite.
